--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   device_info_plus: ^0.7.2
   permission_handler: ^5.1.0+2
   flutter_screenutil: ^4.0.4
+  ss_bottom_navbar: ^0.1.1
+  google_fonts: ^1.1.2
 
 dev_dependencies:
   flutter_test:
