--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_screenutil: ^4.0.4
   ss_bottom_navbar: ^0.1.1
   google_fonts: ^1.1.2
+  calendar_view: ^1.0.0
 
 dev_dependencies:
   flutter_test:
