add transaction UI

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   ss_bottom_navbar: ^0.1.1
   google_fonts: ^1.1.2
   calendar_view: ^1.0.0
+  flutter_masked_text: ^0.8.0
 
 dev_dependencies:
   flutter_test:
