--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   shimmer: ^2.0.0
   sleek_circular_slider: ^2.0.1
   flutter_iconpicker: ^2.2.3
+  text_scroll: ^0.1.0
 
 dev_dependencies:
   flutter_test:
