--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   sleek_circular_slider: ^2.0.1
   flutter_iconpicker: ^2.2.3
   text_scroll: ^0.1.0
+  emoji_picker_2: ^0.3.0
+  settings_ui: ^2.0.2
 
 dev_dependencies:
   flutter_test:
