--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   text_scroll: ^0.1.0
   emoji_picker_2: ^0.3.0
   settings_ui: ^2.0.2
+  r_dotted_line_border: ^0.1.1
 
 dev_dependencies:
   flutter_test:
